--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.3",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^6.8.4",
